--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "dragula": "^3.7.2",
     "ng-dragula": "^1.0.0",
     "ng-sidebar": "^8.0.0",
+    "ng2-validation": "^4.2.0",
+    "quill": "^1.3.6",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "~6.3.2",
+    "rxjs-compat": "^6.3.3",
     "screenfull": "^3.3.3",
     "spinthatshit": "^1.0.4",
     "text-mask-addons": "^3.8.0",
@@ -47,8 +50,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.6",
-    "@angular/cli": "~7.0.0-beta.4",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/cli": "^7.1.0",
+    "@angular/compiler-cli": "^7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.3",
