--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
                         "styles": [
                             "src/assets/fonts/linea/styles.css",
                             "src/assets/fonts/header/_flaticon.scss",
+                            "./node_modules/font-awesome/css/font-awesome.css",
                             "./node_modules/dragula/dist/dragula.css",
                             "./node_modules/quill/dist/quill.snow.css",
                             "./node_modules/angular-calendar/scss/angular-calendar.scss",
